k8/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: registry
  name: registry
spec:
  ports:
    - name: "18080"
      port: 18080
      targetPort: 18080
  selector:
    io.kompose.service: registry
status:
  loadBalancer: {}
